# loophunter

./: .gitignore  .woodpecker.yml  Cargo.toml  INSTALL.md  LICENSE  README.md  config.toml  static_loop.sh
.github/workflows/: ci.yml  release.yml
src/: checker.rs  db.rs  main.rs  notifier.rs
